[tool.poetry]
name = "histo-freq"
version = "0.1.0"
description = "Tool to output graph of latency frequency as a histogram"
authors = []
include = ["poetry.lock"]

[tool.poetry.dependencies]
python = "^3.7"
plotly = "^5.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[tool.poetry.scripts]
histo-freq = 'histo_freq.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
