[tool.poetry]
name = "no_op"
version = "0.1.0"
description = "Example no-op artifact checker tool"
authors = []
include = ["poetry.lock"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[tool.poetry.scripts]
no-op = 'no_op.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
